tests/NormalTests/paczka1/fuzzy1/51821145.err
Error in line 3: XyteP4c6 A874 89,9
Error in line 12: EBfcfnvyr7 S89 33,4
Error in line 16: EBfcfnvyr7 S629 42,6
Error in line 18: EBfcfnvyr7 S89 87,6
Error in line 21: EBfcfnvyr7 S629 94,2
Error in line 30: EBfcfnvyr7 S629 79,27
Error in line 38: EBfcfnvyr7 A874 83,6
